feat: ACBT live browser view, Turso search history, /searches portfolio page
- EC2 sidecar: use AgentCore BrowserClient for cloud-hosted Chromium
  - generate_live_view_url() streamed as SSE live_view event (iframe embed)
  - NovaAct uses cdp_endpoint_url + cdp_headers from ACBT
  - Graceful fallback to local headless if ACBT unavailable
- Wire saveSearch in /api/titleai/route.ts to persist every completed search
- Add /api/searches route (GET list + GET by id) backed by Turso libSQL
- Add /searches page: portfolio of past title searches with risk indicators
- Add History button in titleai nav linking to /searches

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/amazon-bedrock": "^4.0.63",
     "@ai-sdk/react": "^3.0.99",
     "@aws-sdk/client-bedrock-runtime": "^3.995.0",
+    "@libsql/client": "^0.17.0",
     "@rive-app/react-webgl2": "^4.27.0",
     "@streamdown/cjk": "^1.0.2",
     "@streamdown/code": "^1.0.3",
