--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/react": "^3.0.99",
     "@aws-sdk/client-bedrock-runtime": "^3.995.0",
     "@libsql/client": "^0.17.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@rive-app/react-webgl2": "^4.27.0",
     "@streamdown/cjk": "^1.0.2",
     "@streamdown/code": "^1.0.3",
