--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "e2b": "^2.12.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.34.3",
+    "inngest": "^3.52.3",
     "jspdf": "^4.2.0",
     "lucide-react": "^0.575.0",
     "media-chrome": "^4.18.0",
