--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/amazon-bedrock": "^4.0.63",
     "@ai-sdk/react": "^3.0.99",
     "@aws-sdk/client-bedrock-runtime": "^3.995.0",
+    "@aws-sdk/client-textract": "^3.997.0",
     "@clerk/nextjs": "^6.38.1",
     "@libsql/client": "^0.17.0",
     "@neondatabase/serverless": "^1.0.2",
