feat: rewrite Textract - remove 10MB limit, add async S3 pipeline for large PDFs (mirrors homestandai)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/amazon-bedrock": "^4.0.63",
     "@ai-sdk/react": "^3.0.99",
     "@aws-sdk/client-bedrock-runtime": "^3.995.0",
+    "@aws-sdk/client-s3": "^3.999.0",
     "@aws-sdk/client-textract": "^3.997.0",
     "@clerk/nextjs": "^6.38.1",
     "@libsql/client": "^0.17.0",
@@ -41,6 +42,7 @@
     "motion": "^12.34.3",
     "nanoid": "^5.1.6",
     "next": "16.1.6",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
